webapps/test/v2/WEB-INF/jsp/error/ajax_error.jsp
<div class="error-container" style="margin:3em;">
	<div class="alert alert-danger alert-dismissible" role="alert">
		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
			<span aria-hidden="true">&times;</span>
		</button>
		<strong>${error_status} ${error_title}</strong>
		${error_message}
	</div>
</div>